--- a/tree.html
+++ b/tree.html
@@ -21,6 +21,9 @@
         <li class="file" data-basename="LICENSE.md">
           <a href="/home/khai/programming/my-deno-scripts/LICENSE.md">LICENSE.md</a>
         </li>
+        <li class="file" data-basename="tree.html">
+          <a href="/home/khai/programming/my-deno-scripts/tree.html">tree.html</a>
+        </li>
         <li class="file" data-basename="README.md">
           <a href="/home/khai/programming/my-deno-scripts/README.md">README.md</a>
         </li>
