Fix servable URLs

--- a/tree.html
+++ b/tree.html
@@ -19,13 +19,13 @@
         <a href="/home/khai/programming/my-deno-scripts">.</a>
         <ul>
         <li class="file" data-basename="LICENSE.md">
-          <a href="/home/khai/programming/my-deno-scripts/LICENSE.md">LICENSE.md</a>
+          <a href="/home/khai/programming/my-deno-scripts/LICENSE">LICENSE.md</a>
         </li>
         <li class="file" data-basename="tree.html">
-          <a href="/home/khai/programming/my-deno-scripts/tree.html">tree.html</a>
+          <a href="/home/khai/programming/my-deno-scripts/tree">tree.html</a>
         </li>
         <li class="file" data-basename="README.md">
-          <a href="/home/khai/programming/my-deno-scripts/README.md">README.md</a>
+          <a href="/home/khai/programming/my-deno-scripts/README">README.md</a>
         </li>
           <li class="directory" data-basename="lib">
             <a href="/home/khai/programming/my-deno-scripts/lib">lib</a>
