--- a/tree.html
+++ b/tree.html
@@ -16,36 +16,36 @@
       <hr />
       
       <li class="directory" data-basename=".">
-        <a href="/home/khai/programming/my-deno-scripts">.</a>
+        <a href=".">.</a>
         <ul>
         <li class="file" data-basename="LICENSE.md">
-          <a href="/home/khai/programming/my-deno-scripts/LICENSE">LICENSE.md</a>
+          <a href="LICENSE">LICENSE.md</a>
         </li>
         <li class="file" data-basename="tree.html">
-          <a href="/home/khai/programming/my-deno-scripts/tree">tree.html</a>
+          <a href="tree">tree.html</a>
         </li>
         <li class="file" data-basename="README.md">
-          <a href="/home/khai/programming/my-deno-scripts/README">README.md</a>
+          <a href="README">README.md</a>
         </li>
           <li class="directory" data-basename="lib">
-            <a href="/home/khai/programming/my-deno-scripts/lib">lib</a>
+            <a href="lib">lib</a>
             <ul>
             <li class="file" data-basename="generate-index-page.ts">
-              <a href="/home/khai/programming/my-deno-scripts/lib/generate-index-page.ts">generate-index-page.ts</a>
+              <a href="lib/generate-index-page.ts">generate-index-page.ts</a>
             </li>
             <li class="file" data-basename="project-root.ts">
-              <a href="/home/khai/programming/my-deno-scripts/lib/project-root.ts">project-root.ts</a>
+              <a href="lib/project-root.ts">project-root.ts</a>
             </li>
             <li class="file" data-basename="format-code.ts">
-              <a href="/home/khai/programming/my-deno-scripts/lib/format-code.ts">format-code.ts</a>
+              <a href="lib/format-code.ts">format-code.ts</a>
             </li>
             </ul>
           </li>
           <li class="directory" data-basename="cmd">
-            <a href="/home/khai/programming/my-deno-scripts/cmd">cmd</a>
+            <a href="cmd">cmd</a>
             <ul>
             <li class="file" data-basename="generate-index-page.ts">
-              <a href="/home/khai/programming/my-deno-scripts/cmd/generate-index-page.ts">generate-index-page.ts</a>
+              <a href="cmd/generate-index-page.ts">generate-index-page.ts</a>
             </li>
             </ul>
           </li>
