--- a/tree.html
+++ b/tree.html
@@ -19,13 +19,13 @@
         <a href=".">.</a>
         <ul>
         <li class="file" data-basename="LICENSE.md">
-          <a href="LICENSE">LICENSE.md</a>
+          <a href="LICENSE.md">LICENSE.md</a>
         </li>
         <li class="file" data-basename="tree.html">
-          <a href="tree">tree.html</a>
+          <a href="tree.html">tree.html</a>
         </li>
         <li class="file" data-basename="README.md">
-          <a href="README">README.md</a>
+          <a href="README.md">README.md</a>
         </li>
           <li class="directory" data-basename="lib">
             <a href="lib">lib</a>
@@ -36,11 +36,17 @@
             <li class="file" data-basename="project-root.ts">
               <a href="lib/project-root.ts">project-root.ts</a>
             </li>
+            <li class="file" data-basename="insert-object-key.ts">
+              <a href="lib/insert-object-key.ts">insert-object-key.ts</a>
+            </li>
             <li class="file" data-basename="format-code.ts">
               <a href="lib/format-code.ts">format-code.ts</a>
             </li>
             </ul>
           </li>
+        <li class="file" data-basename="publish.sh">
+          <a href="publish.sh">publish.sh</a>
+        </li>
           <li class="directory" data-basename="cmd">
             <a href="cmd">cmd</a>
             <ul>
