--- a/tree.html
+++ b/tree.html
@@ -24,12 +24,23 @@
         <li class="file" data-basename="tree.html">
           <a href="tree.html">tree.html</a>
         </li>
+          <li class="directory" data-basename="test">
+            <a href="test">test</a>
+            <ul>
+            <li class="file" data-basename="insert-object-key.test.ts">
+              <a href="test/insert-object-key.test.ts">insert-object-key.test.ts</a>
+            </li>
+            </ul>
+          </li>
         <li class="file" data-basename="README.md">
           <a href="README.md">README.md</a>
         </li>
           <li class="directory" data-basename="lib">
             <a href="lib">lib</a>
             <ul>
+            <li class="file" data-basename="traverse-file-system.ts">
+              <a href="lib/traverse-file-system.ts">traverse-file-system.ts</a>
+            </li>
             <li class="file" data-basename="generate-index-page.ts">
               <a href="lib/generate-index-page.ts">generate-index-page.ts</a>
             </li>
@@ -44,12 +55,18 @@
             </li>
             </ul>
           </li>
+        <li class="file" data-basename="test.sh">
+          <a href="test.sh">test.sh</a>
+        </li>
         <li class="file" data-basename="publish.sh">
           <a href="publish.sh">publish.sh</a>
         </li>
           <li class="directory" data-basename="cmd">
             <a href="cmd">cmd</a>
             <ul>
+            <li class="file" data-basename="run-tests.ts">
+              <a href="cmd/run-tests.ts">run-tests.ts</a>
+            </li>
             <li class="file" data-basename="generate-index-page.ts">
               <a href="cmd/generate-index-page.ts">generate-index-page.ts</a>
             </li>
