--- a/tree.html
+++ b/tree.html
@@ -47,8 +47,14 @@
             <li class="file" data-basename="project-root.ts">
               <a href="lib/project-root.ts">project-root.ts</a>
             </li>
+            <li class="file" data-basename="stdin.ts">
+              <a href="lib/stdin.ts">stdin.ts</a>
+            </li>
             <li class="file" data-basename="insert-object-key.ts">
               <a href="lib/insert-object-key.ts">insert-object-key.ts</a>
+            </li>
+            <li class="file" data-basename="json-indent.ts">
+              <a href="lib/json-indent.ts">json-indent.ts</a>
             </li>
             <li class="file" data-basename="format-code.ts">
               <a href="lib/format-code.ts">format-code.ts</a>
@@ -69,6 +75,9 @@
             </li>
             <li class="file" data-basename="generate-index-page.ts">
               <a href="cmd/generate-index-page.ts">generate-index-page.ts</a>
+            </li>
+            <li class="file" data-basename="insert-object-key.ts">
+              <a href="cmd/insert-object-key.ts">insert-object-key.ts</a>
             </li>
             </ul>
           </li>
