Name root as root "/"

--- a/tree.html
+++ b/tree.html
@@ -16,7 +16,7 @@
       <hr />
       
       <li class="directory" data-basename=".">
-        <a href=".">.</a>
+        <a href=".">/</a>
         <ul>
         <li class="file" data-basename="LICENSE.md">
           <a href="LICENSE.md">LICENSE.md</a>
