--- a/tree.html
+++ b/tree.html
@@ -14,74 +14,76 @@
     <body>
       <h1>Files</h1>
       <hr />
-      
-      <li class="directory" data-basename=".">
-        <a href=".">/</a>
-        <ul>
-        <li class="file" data-basename="LICENSE.md">
-          <a href="LICENSE.md">LICENSE.md</a>
-        </li>
-        <li class="file" data-basename="tree.html">
-          <a href="tree.html">tree.html</a>
-        </li>
-          <li class="directory" data-basename="test">
-            <a href="test">test</a>
-            <ul>
-            <li class="file" data-basename="insert-object-key.test.ts">
-              <a href="test/insert-object-key.test.ts">insert-object-key.test.ts</a>
-            </li>
-            </ul>
+      <main><nav>
+        
+        <li class="directory" data-basename=".">
+          <a href=".">/</a>
+          <ul>
+          <li class="file" data-basename="LICENSE.md">
+            <a href="LICENSE.md">LICENSE.md</a>
           </li>
-        <li class="file" data-basename="README.md">
-          <a href="README.md">README.md</a>
-        </li>
-          <li class="directory" data-basename="lib">
-            <a href="lib">lib</a>
-            <ul>
-            <li class="file" data-basename="traverse-file-system.ts">
-              <a href="lib/traverse-file-system.ts">traverse-file-system.ts</a>
-            </li>
-            <li class="file" data-basename="generate-index-page.ts">
-              <a href="lib/generate-index-page.ts">generate-index-page.ts</a>
-            </li>
-            <li class="file" data-basename="project-root.ts">
-              <a href="lib/project-root.ts">project-root.ts</a>
-            </li>
-            <li class="file" data-basename="stdin.ts">
-              <a href="lib/stdin.ts">stdin.ts</a>
-            </li>
-            <li class="file" data-basename="insert-object-key.ts">
-              <a href="lib/insert-object-key.ts">insert-object-key.ts</a>
-            </li>
-            <li class="file" data-basename="json-indent.ts">
-              <a href="lib/json-indent.ts">json-indent.ts</a>
-            </li>
-            <li class="file" data-basename="format-code.ts">
-              <a href="lib/format-code.ts">format-code.ts</a>
-            </li>
-            </ul>
+          <li class="file" data-basename="tree.html">
+            <a href="tree.html">tree.html</a>
           </li>
-        <li class="file" data-basename="test.sh">
-          <a href="test.sh">test.sh</a>
-        </li>
-        <li class="file" data-basename="publish.sh">
-          <a href="publish.sh">publish.sh</a>
-        </li>
-          <li class="directory" data-basename="cmd">
-            <a href="cmd">cmd</a>
-            <ul>
-            <li class="file" data-basename="run-tests.ts">
-              <a href="cmd/run-tests.ts">run-tests.ts</a>
+            <li class="directory" data-basename="test">
+              <a href="test">test</a>
+              <ul>
+              <li class="file" data-basename="insert-object-key.test.ts">
+                <a href="test/insert-object-key.test.ts">insert-object-key.test.ts</a>
+              </li>
+              </ul>
             </li>
-            <li class="file" data-basename="generate-index-page.ts">
-              <a href="cmd/generate-index-page.ts">generate-index-page.ts</a>
-            </li>
-            <li class="file" data-basename="insert-object-key.ts">
-              <a href="cmd/insert-object-key.ts">insert-object-key.ts</a>
-            </li>
-            </ul>
+          <li class="file" data-basename="README.md">
+            <a href="README.md">README.md</a>
           </li>
-        </ul>
-      </li>
+            <li class="directory" data-basename="lib">
+              <a href="lib">lib</a>
+              <ul>
+              <li class="file" data-basename="traverse-file-system.ts">
+                <a href="lib/traverse-file-system.ts">traverse-file-system.ts</a>
+              </li>
+              <li class="file" data-basename="generate-index-page.ts">
+                <a href="lib/generate-index-page.ts">generate-index-page.ts</a>
+              </li>
+              <li class="file" data-basename="project-root.ts">
+                <a href="lib/project-root.ts">project-root.ts</a>
+              </li>
+              <li class="file" data-basename="stdin.ts">
+                <a href="lib/stdin.ts">stdin.ts</a>
+              </li>
+              <li class="file" data-basename="insert-object-key.ts">
+                <a href="lib/insert-object-key.ts">insert-object-key.ts</a>
+              </li>
+              <li class="file" data-basename="json-indent.ts">
+                <a href="lib/json-indent.ts">json-indent.ts</a>
+              </li>
+              <li class="file" data-basename="format-code.ts">
+                <a href="lib/format-code.ts">format-code.ts</a>
+              </li>
+              </ul>
+            </li>
+          <li class="file" data-basename="test.sh">
+            <a href="test.sh">test.sh</a>
+          </li>
+          <li class="file" data-basename="publish.sh">
+            <a href="publish.sh">publish.sh</a>
+          </li>
+            <li class="directory" data-basename="cmd">
+              <a href="cmd">cmd</a>
+              <ul>
+              <li class="file" data-basename="run-tests.ts">
+                <a href="cmd/run-tests.ts">run-tests.ts</a>
+              </li>
+              <li class="file" data-basename="generate-index-page.ts">
+                <a href="cmd/generate-index-page.ts">generate-index-page.ts</a>
+              </li>
+              <li class="file" data-basename="insert-object-key.ts">
+                <a href="cmd/insert-object-key.ts">insert-object-key.ts</a>
+              </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </nav></main>
     </body>
   </html>
